# ME_OPCUA_GW

./: CMakeLists.txt  README.md  TIG4 RS Communication Model V1.xlsx  TIG4-RS-Communication_OPCUA-Model.xlsx  sdkconfig
components/ADS1015/: Adafruit_ADS1015.cpp  Adafruit_ADS1015.h  CMakeLists.txt
components/EtherCard/: CMakeLists.txt
components/EtherCard/src/: EtherCard.h  _EEPROM.cpp  enc28j60.cpp  enc28j60.h  net.h
components/MultiSerial/: CMakeLists.txt  MultiSerial.cpp  MultiSerial.h
components/Tasks/: ADS_Task.cpp  ADS_Task.h  CMakeLists.txt  CMakeLists_.txt  Eth_Task.cpp  Eth_Task.h  OPCUA_Task.cpp  OPCUA_Task.h  RS422_task.cpp  RS422_task.h  Task_Sync.cpp  Task_Sync.h  WeldingMachine.cpp  WeldingMachine.h  WiFi_Task.cpp  WiFi_Task.h  _CMakeLists.txt
components/Tasks/lib/: TYPES_DI_generated.h  TYPES_DI_generated_encoding_binary.h  TYPES_DI_generated_handling.h  TYPES_TIG4_generated.c  TYPES_TIG4_generated.h  TYPES_TIG4_generated_encoding_binary.h  TYPES_TIG4_generated_handling.h  _open62541.h  open62541.c  open62541.h  ua_namespace_di.c  ua_namespace_di.h  ua_namespace_tig4.h
components/Tasks/lib/open62541/: CMakeLists.txt
components/Tasks/lib/open62541/arch/: network_tcp.c
components/Tasks/lib/open62541/include/open62541/: types.h
components/Tasks/lib/open62541/tools/: TIG4WeldingMachine.bsd  TIG4WeldingMachine.csv  TYPES_DI_generated.c  TYPES_DI_generated.h  TYPES_DI_generated_encoding_binary.h  TYPES_TIG4_generated.h  TYPES_TIG4_generated_encoding_binary.h
components/Tasks/lib/open62541/tools/nodeset_compiler/: Opc.Ua.Di.NodeSet2.xml  TIG4WeldingMachine.xml  ua_namespace_di.h  ua_namespace_tig4.c  ua_namespace_tig4.h
components/arduino-esp32/: CMakeLists.txt
components/arduino-esp32/cores/esp32/: Arduino.h  WMath.cpp  esp32-hal-spi.c  esp32-hal-uart.c
components/arduino-esp32/libraries/AzureIoT/examples/GetStarted/: GetStarted.ino
components/arduino-esp32/libraries/EEPROM/examples/eeprom_write/: eeprom_write.ino
components/arduino-esp32/libraries/EEPROM/src/: EEPROM.h
components/arduino-esp32/libraries/WiFi/src/: ETH.cpp
components/cpp_utils/: CMakeLists.txt  Task_cxx.cpp  Task_cxx.h  WiFi.cpp  WiFiEventHandler.h
components/open62541/: CMakeLists.txt
components/open62541/custom_namespace/: TIG4WeldingMachineLight.bsd  TIG4WeldingMachineLight.csv  TIG4WeldingMachineLight.xml  nodes_blacklist_ns0.txt  ns1_tig4.c  ns1_tig4.h  types_tig4_generated.c  types_tig4_generated.h  types_tig4_generated_encoding_binary.h  types_tig4_generated_handling.h
main/: CMakeLists.txt  me_opcua_gw_main.cpp
