set(srcs 
    "src/server/ua_server_discovery_mdns.c"
	"deps/mdnsd/libmdnsd/1035.c"
	"deps/mdnsd/libmdnsd/xht.c"
	"deps/mdnsd/libmdnsd/sdtxt.c"
	"deps/mdnsd/libmdnsd/mdnsd.c"
	"src/ua_types.c"
	"src/ua_types_encoding_binary.c"
	"build/src_generated/open62541/types_generated.c"
	"build/src_generated/open62541/transport_generated.c"
	"build/src_generated/open62541/statuscodes.c"
	"src/ua_util.c"
	"src/ua_workqueue.c"
	"src/ua_timer.c"
	"src/ua_connection.c"
	"src/ua_securechannel.c"
	"src/server/ua_session.c"
	"src/server/ua_nodes.c"
	"src/server/ua_server.c"
	"src/server/ua_server_ns0.c"
	"src/server/ua_server_config.c"
	"src/server/ua_server_binary.c"
	"src/server/ua_server_utils.c"
	"src/server/ua_server_discovery.c"
	"src/server/ua_server_async.c"
	"src/server/ua_securechannel_manager.c"
	"src/server/ua_session_manager.c"
	"src/pubsub/ua_pubsub_networkmessage.c"
	"src/pubsub/ua_pubsub_writer.c"
	"src/pubsub/ua_pubsub_reader.c"
	"src/pubsub/ua_pubsub_manager.c"
	"src/pubsub/ua_pubsub_ns0.c"
	"src/server/ua_services_view.c"
	"src/server/ua_services_method.c"
	"src/server/ua_services_session.c"
	"src/server/ua_services_attribute.c"
	"src/server/ua_services_discovery.c"
	"src/server/ua_services_subscription.c"
	"src/server/ua_services_monitoreditem.c"
	"src/server/ua_services_securechannel.c"
	"src/server/ua_services_nodemanagement.c"
	"src/server/ua_services_discovery_multicast.c"
	"src/client/ua_client.c"
	"src/client/ua_client_connect.c"
	"src/client/ua_client_connect_async.c"
	"src/client/ua_client_discovery.c"
	"src/client/ua_client_highlevel.c"
	"src/client/ua_client_subscriptions.c"
	"src/client/ua_client_worker.c"
	"deps/libc_time.c"
	"deps/pcg_basic.c" 
	"deps/base64.c"
	"build/src_generated/open62541/namespace0_generated.c"
	
	"custom_namespace/ns1_tig4.c"
	#"custom_namespace/ns2_di.c"
	"custom_namespace/types_tig4_generated.c"
	#"custom_namespace/types_di_generated.c"
	
	"src/server/ua_discovery_manager.c"
	"src/server/ua_subscription.c"
	"src/server/ua_subscription_monitoreditem.c"
	"src/server/ua_subscription_datachange.c"
	"src/server/ua_subscription_events.c"
	"plugins/ua_log_stdout.c"
	"plugins/ua_accesscontrol_default.c"
	"plugins/ua_pki_default.c"
	"plugins/ua_nodestore_ziptree.c"
	"plugins/ua_nodestore_hashmap.c"
	"plugins/ua_config_default.c"
	"plugins/securityPolicies/ua_securitypolicy_none.c"
	"plugins/securityPolicies/securitypolicy_mbedtls_common.c"
	"plugins/securityPolicies/ua_securitypolicy_basic128rsa15.c"
	"plugins/securityPolicies/ua_securitypolicy_basic256.c"
	"plugins/securityPolicies/ua_securitypolicy_basic256sha256.c"
	"arch/freertosLWIP/ua_clock.c"
	"arch/freertosLWIP/ua_architecture_functions.c"
	"arch/network_tcp.c"
	)

set(private_include_dirs
	"${IDF_PATH}/components/freertos/include/freertos"
	"build/src_generated"
	"include"
	"arch"
	"arch/common"
	"deps"
	"src"
	"src/client"
	"plugins/include"
	"custom_namespace"
	)

set(public_include_dirs
	"build/src_generated"
	"include"
	"arch"
	"arch/common"
	"deps"
	"src"
	"src/client"
	"plugins/include"
	"custom_namespace"
	)

idf_component_register(SRCS "${srcs}"
                    INCLUDE_DIRS "${public_include_dirs}"
                    PRIV_INCLUDE_DIRS "${private_include_dirs}"
                    LDFRAGMENTS
                    REQUIRES lwip vfs freertos
                    PRIV_REQUIRES soc)

target_compile_options(${COMPONENT_LIB} PUBLIC -DUA_ARCHITECTURE_FREERTOSLWIP -DUA_ARCHITECTURE_FREERTOSLWIP_POSIX_CLOCK)


